# legion

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  env.example  mise.toml  pyproject.toml  vulture_whitelist.py
.claude/commands/: review.md
.claude/rules/: patterns.md  worktrees.md
.codex/: instructions.md
.githooks/: pre-commit
alembic/: env.py  script.py.mako
alembic/versions/: 20260404_01_phase_1_baseline.py  20260405_01_add_audit_events.py  20260405_02_add_query_indexes.py  20260411_01_add_slack_session_links.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md
docs/decisionlog/: 0000-template.md  0001-mypy-type-checking.md  0002-vulture-dead-code.md  0003-bandit-sast.md  0004-pip-audit-vuln-scanning.md  0005-httpx-runtime-dependency.md  0005-observability-optional-deps.md  0006-httpx-runtime-dependency.md  0007-fleet-api-client-in-core.md  0008-command-registry-to-plumbing.md  0009-developer-cli-scaffolding-and-review-commands.md  0010-add-project-scope-to-fleet-hierarchy.md  0011-feature-brief-generator-in-legion-dev.md  0012-path-based-agent-websocket-bootstrap-target.md  0013-alembic-runtime-support.md  0014-websocket-client-library-for-agent-process.md  0015-kubernetes-python-client-for-core-tools.md  0016-langgraph-runtime-dependency.md  0017-langchain-anthropic-llm-provider.md  0024-custom-stategraph-react-loop-for-b2-runtime.md  0025-capability-based-intra-group-dispatch.md  0026-plugin-discovery-and-tool-adapter.md
docs/sre/: README.md  architecture-fit.md  build-phases.md  decisions.md  domain-model.md
legion/: main.py  orm_registry.py
legion/agent_runner/: __init__.py  client.py  config.py  executor.py  main.py  models.py
legion/agents/: callbacks.py  config.py  context.py  evaluator.py  exceptions.py  graph.py  tools.py
legion/api/: config.py  deps.py  errors.py  main.py  middleware.py  schemas.py  websocket.py
legion/cli/: config.py  main.py  registry.py
legion/cli_dev/: main.py  views.py
legion/core/: exceptions.py
legion/domain/: agent.py  agent_auth.py  agent_group.py  audit_event.py  channel_mapping.py  cluster_group.py  filter_rule.py  incident.py  job.py  message.py  organization.py  project.py  prompt_config.py  protocol.py  session.py
legion/internal/: adr.py  feature.py  review.py  scaffold.py
legion/plumbing/: agents.py  database.py  exceptions.py  logging.py  migrations.py  plugins.py  registry.py  scheduler.py  subprocess.py  telemetry.py  tokens.py  validation.py
legion/services/: agent_delivery_service.py  agent_session_handler.py  agent_session_repository.py  (+17 more)
local/: compose_agent_runner.py  demo_agent.py  demo_client.py
scripts/: demo_agent.py  test-fleet-cli.sh
tests/: test_agent_auth.py  test_agent_runner.py  test_agent_runner_config.py  test_agent_runner_reconnect.py  test_agent_session_repository.py  test_agents_context.py  test_agents_evaluator.py  test_agents_graph.py  test_agents_tools_discovery.py  test_api_auth.py  test_api_crud.py  test_api_health.py  test_api_schema_contracts.py  test_api_startup.py  test_api_websocket.py  test_banned_imports.py  test_circular_imports.py  test_cli_db.py  test_cli_dev_adr.py  test_cli_dev_architecture.py  test_cli_dev_feature.py  test_cli_dev_issue.py  test_cli_dev_review.py  test_cli_dev_scaffold.py  test_cli_fleet.py  test_cli_plugins.py  test_core_database.py  test_core_fleet_api_contract.py  test_core_github_issues.py  test_core_kubernetes.py  test_core_kubernetes_packaging.py  test_core_network_tools.py  test_core_slack_client.py  test_dangerous_calls.py  test_dependency_direction.py  test_dispatch_service.py  test_domain_audit_event.py  test_domain_fleet.py  test_domain_incident.py  test_domain_routing.py  (+25 more)
(+117 files in other folders)
