[project]
name = "legion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "apscheduler>=3.10",
    "asciichartpy>=1.5.25",
    "dnspython>=2.8.0",
    "fastapi>=0.135.1",
    "ipython>=9.10.0",
    "openstacksdk>=4.10.0",
    "paramiko>=4.0.0",
    "plotext>=5.3.2",
    "ptpython>=3.0.32",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.8",
    "python-openstackclient>=9.0.0",
    "slack-bolt>=1.27.0",
    "sqlalchemy>=2.0",
    "termgraph>=0.7.5",
    "typer>=0.23.1",
    "uvicorn>=0.41.0",
]

[project.scripts]
legion-cli = "legion.main:main"
legion-slack = "legion.slack.main:main"
legion-slack-manifest = "legion.slack.manifest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["legion"]

[project.optional-dependencies]
agents = ["langchain-openai>=0.3", "langchain-core>=0.3"]
postgres = ["psycopg[binary]>=3.1"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
