[project]
name = "legion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "apscheduler>=3.10",
    "asciichartpy>=1.5.25",
    "dnspython>=2.8.0",
    "fastapi>=0.135.1",
    "ipython>=9.10.0",
    "openstacksdk>=4.10.0",
    "paramiko>=4.0.0",
    "plotext>=5.3.2",
    "ptpython>=3.0.32",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.8",
    "python-openstackclient>=9.0.0",
    "slack-bolt>=1.27.0",
    "sqlalchemy>=2.0",
    "termgraph>=0.7.5",
    "typer>=0.23.1",
    "uvicorn[standard]>=0.41.0",
]

[project.scripts]
legion-cli = "legion.main:main"
legion-api = "legion.api.main:main"
legion-slack = "legion.slack.main:main"
legion-slack-manifest = "legion.slack.manifest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["legion"]

[project.optional-dependencies]
agents = ["langchain-openai>=0.3", "langchain-core>=0.3"]
metrics = ["prometheus-client>=0.20,<1"]
postgres = ["psycopg[binary]>=3.1"]

[dependency-groups]
dev = [
    "bandit>=1.8,<2",
    "httpx>=0.27",
    "mypy>=1.20,<2",
    "pip-audit>=2.7,<3",
    "pytest>=9.0.2",
    "vulture>=2.14",
]

[tool.mypy]
python_version = "3.13"
plugins = ["sqlalchemy.ext.mypy.plugin"]

# Useful checks that catch real bugs
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
ignore_missing_imports = true

# Relaxed globally — tighten per-module as code matures
disallow_untyped_defs = false
warn_return_any = false

# Strict on clean, well-typed modules
[[tool.mypy.overrides]]
module = [
    "legion.plumbing.*",
    "legion.internal.*",
    "legion.domain.*",
]
disallow_untyped_defs = true
warn_return_any = true

# SQLAlchemy ORM repositories — Column descriptor false positives
[[tool.mypy.overrides]]
module = [
    "legion.services.fleet_repository",
    "legion.services.session_repository",
    "legion.services.job_repository",
    "legion.services.repository",
    "legion.slack.incident.persistence",
]
disable_error_code = ["assignment", "arg-type"]

# Third-party libraries without type stubs
[[tool.mypy.overrides]]
module = ["paramiko", "paramiko.*"]
ignore_missing_imports = true

# Modules importing untyped third-party libraries
[[tool.mypy.overrides]]
module = ["legion.core.network.ssh_client"]
disable_error_code = ["import-untyped"]

[tool.bandit]
skips = ["B101", "B404"]
